--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: 
+name: Abulla Othow
 
 # Short bio or description (displayed in the header)
-description: 
+description: Data Analyt 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: 
+avatar: https://github.com/settings/profile
 
 # Your website URL (e.g. https://barryclark.github.io or https://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
@@ -29,10 +29,10 @@ baseurl:
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: getabelothow@gmail.com 
   facebook:
   flickr:
-  github: 
+  github: abelothow/blog
   instagram:
   linkedin:
   pinterest:
@@ -45,7 +45,7 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # More info on how to get your shortname here: https://help.disqus.com/installation/whats-a-shortname
-disqus:
+disqus: blog-abelothow
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
