--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Abulla Othow
 description: Data Analyt 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/settings/profile
+avatar: https://github.com/abelothow/blog/blob/master/images/404.jpg
 
 # Your website URL (e.g. https://barryclark.github.io or https://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
