--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 name: Abulla Othow
 
 # Short bio or description (displayed in the header)
-description: Data Analyt 
+description: Data Analyt
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/settings/profile
+avatar: https://github.com/abelothow/abelothow.github.io/blob/master/491792.jpg?raw=true
 
 # Your website URL (e.g. https://barryclark.github.io or https://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: 
+url:
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -29,7 +29,7 @@ baseurl: /blog
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: getabelothow@gmail.com 
+  email: getabelothow@gmail.com
   facebook:
   flickr:
   github: abelothow/blog
@@ -37,7 +37,7 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: 
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
